add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)
add_executable(tests2 tests2.cpp)
add_executable(tests3 tests3.cpp)
add_executable(tests4 tests4.cpp)
add_executable(tests5 tests5.cpp)
add_executable(tests6 tests6.cpp)
add_executable(tests7 tests7.cpp)
add_executable(mile mile_to_kilometer.cpp)
add_executable(loesungen aufgaben_loesungen.cpp)


# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
